Clear keyboard accessory suggestions on reload

Before this CL, the accessory would only clear the accessory suggestions
when the origin changes during a navigation or when new suggestions
overwrite the existing ones.
With this CL, the accessory also clears the suggestions when a reload
was the reason for a page navigation.

Bug: 902716
Change-Id: I897dd774a31676adb4aede8fc4016446f058ffa0
Reviewed-on: https://chromium-review.googlesource.com/c/1323712
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Friedrich Horschig [CET] <fhorschig@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#606476}(cherry picked from commit 3d3b012123ef68d1b86428f835827c4e89170c72 [formerly 50e04ea75fbeaa365f45a817a93480e264a66506])
Reviewed-on: https://chromium-review.googlesource.com/c/1328822
Reviewed-by: Friedrich Horschig [CET] <fhorschig@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#606}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: a0cb7ea86e413f5e250f2e4bc9fda930a64c81e2